fix layout issue

--- a/src/app/forecast/forecast-list/forecast-list.component.scss
+++ b/src/app/forecast/forecast-list/forecast-list.component.scss
@@ -1,4 +1,3 @@
 .row {
-  margin-top: 10px;
-  margin-bottom: 15px;
+  width: 100%
 }
